@@ -1,3 +1,7 @@
+2010-06-24  Werner Koch  <wk@g10code.com>
+
+	* gcrypt.h.in [W32]: Include time.h and not sys/time.h.
+
 2010-04-19  Marcus Brinkmann  <marcus@g10code.de>
 
 	* misc.c (write2stderr): Dummy variable to silence gcc warning.
